# evidence-monitoring-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: constitution-guardian.md  content-agnostic-auditor.md  data-explorer.md  test-runner.md
.claude/hooks/: ruff-fix.sh
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: demo-speaker-notes.md  project-status.md  technical-architecture.md
docs/adr/: 0001-spec-driven-development.md  0002-local-first-with-production-swap.md  0003-llm-scores-code-decides.md  0004-immutable-responses-versioned-scores.md  0005-combined-local-ui.md  0006-citation-status-wrong-indication.md  0007-offline-e2e-capture-rate-and-cli-preflight.md  0008-react-spa-over-fastapi-readonly-api.md  0009-version-aware-question-counts.md  0010-gemini-thinking-disabled.md  0011-provider-evidence-dev-target.md  0012-multi-page-dashboard.md  0013-explicit-target-kind.md  0014-synthesized-evidence-target.md
docs/diagrams/: evidence_monitor_detailed_erd.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  targets.ts
specs/001-evidence-monitoring-poc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/evidence_monitor/: __init__.py  api.py  cli.py  scheduler.py
tests/: fixtures.py
tests/component/: test_approval_gate.py  test_approvals_api.py  test_approved_questions_view.py  (+15 more)
(+123 files in other folders)
