[project]
name = "evidence-monitor"
version = "0.1.0"
description = "Local-first POC that monitors what public LLMs say about therapies vs competitors."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "langgraph>=0.2",
    "anthropic>=0.39",
    "openai>=1.50",
    "google-genai>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "duckdb>=1.0",
]

# Dev tooling lives in a uv dependency group (PEP 735), which `uv sync` installs BY DEFAULT —
# so `uv sync` followed by `uv run pytest` / `uv run ruff` works with no extra flags. (Under
# `[project.optional-dependencies]` these would require `uv sync --extra dev`, a common footgun.)
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "openpyxl>=3.1",  # exercises the importer's Excel (.xlsx) path in tests
]

[project.scripts]
evidence-monitor = "evidence_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evidence_monitor"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src/evidence_monitor --cov-report=term-missing"
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["src/evidence_monitor"]
branch = true
